--- a/templates/display.html
+++ b/templates/display.html
@@ -7,7 +7,7 @@
 		<!-- Root directory display -->
 		{% for p in rootPreamble %}
 		<p>
-			{{ p }}
+			{{ p | indent(12) }}
 		</p>
 		{% endfor %}
 
@@ -17,7 +17,7 @@
 
 		{% for p in rootPostamble %}
 		<p>
-			{{ p }}
+			{{ p | indent(12)}}
 		</p>
 		{% endfor %}
 		{% endif %}
@@ -47,7 +47,7 @@
 		<h1>
 			{{ prompt }} {{ mdCommand }} {{ file }}
 		</h1>
-		{{ md[file] }}
+		{{ md[file] | indent(8)}}
 		{% endfor %}
 		{% endif %}
 
@@ -70,7 +70,7 @@
 		<h1>
 			{{ prompt }} {{ htmlCommand }} {{ file }}
 		</h1>
-		{{ html[file] }}
+		{{ html[file] | indent(8) }}
 		{% endfor %}
 		{% endif %}
 
